--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.4"
     }
 }
